1. support reindex and list 2. more accurate inspect on single kibana index 3. more accurate inspect to skip right kibana index

--- a/.gitignore
+++ b/.gitignore
@@ -128,3 +128,8 @@ dmypy.json
 # Pyre type checker
 .pyre/
 .vscode/settings.json
+.DS_Store
+testscript/adhoc
+testscript/adhoc2
+testcase/testcase1
+testcase/testcase2
